fix:select search repo z-index

--- a/Frontend/src/app/modules/search/search.component.scss
+++ b/Frontend/src/app/modules/search/search.component.scss
@@ -15,6 +15,7 @@ $sidenavTopBaseOffset:110px;
   margin:3px;
 }
 .moreRepositories{
+  z-index: 15;
   .collection{
     position: absolute;
     right:20px;
